--- a/am/templates/base.html
+++ b/am/templates/base.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-$END$
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
