--- a/am/templates/index.html
+++ b/am/templates/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <p>Welcome to the currently titled "Aggressive Mustard": A Log Horizon Tabletop Roleplaying Game resource. Currently this resource exists primarly as a database, but eventually there will be extensive user tools as well.</p>
+    <p>Links</p>
+    <ul>
+        <li><a href="{{ url_for('tags.tag_index') }}">Tag Index</a></li>
+    </ul>
+{% endblock %}
