added a basic view for weapons.
this will allow you to view weapons you've created with the form or otherwise inserted into the database. naturally there will be more styling to do, but the table is pretty close to what I want it to look like. minor adjustments may be made though.

--- a/am/static/css/main.css
+++ b/am/static/css/main.css
@@ -7,3 +7,19 @@
 .content li {
     text-align: left;
 }
+
+table.statblock thead {
+    background: #000000;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+table.statblock tbody .table-fieldname {
+    background: #000000;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+table.statblock tbody .table-description {
+    text-align: left;
+}
