--- a/am/templates/index.html
+++ b/am/templates/index.html
@@ -4,6 +4,7 @@
     <p>Links</p>
     <ul>
         <li><a href="{{ url_for('tags.tag_index') }}">Tag Index</a></li>
+        <li><a href="{{ url_for('enemies.create_enemy') }}">Create Enemy</a></li>
         <li><a href="{{ url_for('items.create_weapon') }}">Create Weapon</a></li>
     </ul>
 {% endblock %}
