fixed up the enemy creation form and added the ability to view an enemy that you've created.
enemy creation isn't quite done yet. while I've added a way to tag enemies already (which I haven't done for weapons yet), there's still a couple more segments of the enemy statblock that need to be implemented. these include the abilities and loot table, as well as a minor tweak for boss stat blocks.

--- a/am/static/css/main.css
+++ b/am/static/css/main.css
@@ -1,25 +1,17 @@
 .content {
     width: 50%;
     margin: 0px auto;
-    text-align: center;
 }
 
 .content li {
     text-align: left;
 }
 
-table.statblock thead {
-    background: #000000;
-    color: #FFFFFF;
+.centered {
     text-align: center;
 }
 
-table.statblock tbody .table-fieldname {
+.inverted {
     background: #000000;
     color: #FFFFFF;
-    text-align: left;
-}
-
-table.statblock tbody .table-description {
-    text-align: left;
 }
