made the text style match the spreadsheet more exactly.
I feel awful about this implementation, but everything in that spreadsheet is so arbitrary. I think a long-term goal for myself will be to come up with my own style for these infoboxes.

--- a/am/templates/enemies/enemy_view.html
+++ b/am/templates/enemies/enemy_view.html
@@ -57,7 +57,7 @@
             {% for a in enemy.abilities %}
                 <tr>
                     <td colspan="6" style="padding-bottom: 10px;">
-                        <b>({{ a.name }} / {% if a.attack_type is not none %}[{{ a.attack_type.name }}] / {% endif %}{{ a.timing }}{% if a.check is not none %} / {{ a.check }}{% endif %}{% if a.target is not none %} / {{ a.target }}{% endif %}{% if a.range is not none %} / {{ a.range }}{% endif %}{% if a.limit is not none %} / {{ a.limit }}{% endif %})</b> {{ a.description }}<br />
+                        <b>({{ a.name }} / {% if a.attack_type is not none %}{% if "Attack" in a.attack_type.name %}[{{ a.attack_type.name }}]{% else %}{{ a.attack_type.name }}{% endif %} / {% endif %}{{ a.timing }}{% if a.check is not none %} / {{ a.check }}{% endif %}{% if a.target is not none %} / {{ a.target }}{% endif %}{% if a.range is not none %} / {{ a.range }}{% endif %}{% if a.limit is not none %} / {{ a.limit }}{% endif %})</b> {{ a.description }}<br />
                     </td>
                 </tr>
             {% endfor %}
