ported styling over to scss.
this is mostly for my own organization and sanity. i'm also excited to use
pyScss instead of needing ruby added to my project.

--- a/am/templates/base.html
+++ b/am/templates/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    {% assets "scss_all" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% endassets %}
     <meta charset="UTF-8">
     <title>{{ title }}</title>
 </head>
