--- a/am/templates/base.html
+++ b/am/templates/base.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    {% assets "scss_all" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-    <div class="content">
-        {% block content %}
-        {% endblock %}
-    </div>
-</body>
+  <head>
+      {% assets "scss_all" %}
+        <link rel="stylesheet" href="{{ ASSET_URL }}">
+      {% endassets %}
+      <meta charset="UTF-8">
+      <title>{{ title }}</title>
+  </head>
+  <body>
+      <div class="content">
+          {% block content %}
+          {% endblock %}
+      </div>
+  </body>
+  <footer>
 </html>
