massive step towards the future.
I've spent the past few days learning (and getting very angry at) several Javascript options. I'm familiar with backbone (though I didn't know how to set it up, hence part of my frustration), but I looked in to Angular2 and React as well. I've settled on backbone though, as it doesn't require me to learn a new syntax (JSX or Typescript). I'm porting the creation forms to be views, so that part is not quite working yet. Basically I added a bunch of groundwork, and it will start working soon.

--- a/am/templates/base.html
+++ b/am/templates/base.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      {% assets "scss_all" %}
-        <link rel="stylesheet" href="{{ ASSET_URL }}">
-      {% endassets %}
-      <meta charset="UTF-8">
-      <title>{{ title }}</title>
+    {% assets "scss_all" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}">
+    {% endassets %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap.min.css') }}">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>{{ title }}</title>
   </head>
   <body>
-      <div class="content">
-          {% block content %}
-          {% endblock %}
-      </div>
+    {% include "navbar.html" %}
+    <div class="form-lightbox">
+      <p>test</p>
+    </div>
+    <div class="content">
+      {% block content %}
+      {% endblock %}
+    </div>
+    <script src="{{ url_for('static', filename='bower_components/requirejs/require.js') }}" data-main="{{ url_for('static', filename='js/config') }}"></script>
   </body>
-  <footer>
 </html>
