--- a/am/static/scss/main.scss
+++ b/am/static/scss/main.scss
@@ -3,6 +3,16 @@
 html {
   font-family: arial;
   font-size: 12px;
+  z-index: 1;
+}
+
+.form-lightbox {
+  display: none;
+  width: 75%;
+  height: 75%;
+  background: #FF00FF;
+  margin: 0 auto;
+  z-index: 1000;
 }
 
 .content {
