fixed some errors that arose from removing backbone-forms.
I also added a bit more of the enemy creation form. It isn't done yet and
I want to come up with a better style for it, so this is still a WIP.
Note: any time you see the color #FF00FF (magenta) on an element, that's
just me testing something. That will never be an actual color in
production.

--- a/am/static/scss/main.scss
+++ b/am/static/scss/main.scss
@@ -13,6 +13,10 @@ html {
   background: #FF00FF;
   margin: 0 auto;
   z-index: 1000;
+
+  .statblock {
+    border: 0;
+  }
 }
 
 .content {
@@ -25,7 +29,7 @@ html {
 }
 
 .statblock {
-  width: 75%;
+  width: 100%;
   border: 1px solid;
 
   /* CSS sorcery for special styling when there are 6+ children */
