--- a/am/static/js/templates/createEnemy.hbs
+++ b/am/static/js/templates/createEnemy.hbs
@@ -2,19 +2,47 @@
   <form role="form" method="post">
   <thead>
     <tr>
-      <td colspan="6"><label for="eName">Enemy Name</label>: <input id="eName" type="text" name="eName"></td>
+      <td class="inverted centered" colspan="6"><label for="eName">Enemy Name</label><input id="eName" type="text" name="eName"></td>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>
-        <label for="eType">Enemy Type</label>:
+      <td class="centered">
         <select id="eType" name="eType">
           {{#each eTypes}}
             <option value="{{id}}">{{name}}</option>
           {{/each}}
         </select>
       </td>
+      <td class="centered"><input type="text" name="tags" placeholder="tag"></td>
+      <td class="centered"><input type="text" name="tags" placeholder="tag"></td>
+      <td class="centered"><input type="text" name="tags" placeholder="tag"></td>
+      <td class="centered"><input type="text" name="tags" placeholder="tag"></td>
+      <td class="centered"><input type="text" name="tags" placeholder="tag"></td>
+    </tr>
+    <tr>
+      <td class="inverted"><label for="rank">Rank</label>:</td>
+      <td><input id="rank" type="text" name="rank"></td>
+      <td class="inverted"><label for="strength">Strength</label>:</td>
+      <td><input id="strength" type="text" name="strength"></td>
+      <td class="inverted"><label for="evasion">Evasion</label>:</td>
+      <td><input id="evasion" type="text" name="evasion"></td>
+    </tr>
+    <tr>
+      <td class="inverted"><label for="health">Health</label>:</td>
+      <td><input id="health" type="text" name="health"></td>
+      <td class="inverted"><label for="dexterity">Dexterity</label>:</td>
+      <td><input id="dexterity" type="text" name="dexterity"></td>
+      <td class="inverted"><label for="resistance">Resistance</label>:</td>
+      <td><input id="resistance" type="text" name="resistance"></td>
+    </tr>
+    <tr>
+      <td class="inverted"><label for="initiative">Initiative</label>:</td>
+      <td><input id="initiative" type="text" name="initiative"></td>
+      <td class="inverted"><label for="power">Power</label>:</td>
+      <td><input id="power" type="text" name="power"></td>
+      <td class="inverted"><label for="physDef">Phys Def</label>:</td>
+      <td><input id="physDef" type="text" name="physDef"></td>
     </tr>
   </tbody>
   </form>
